# GTestsProjectExample

./: .gitignore  CMakeLists.txt  task-push.sh
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/src/: maintest.cpp
